--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,9 @@
-sd2011_path : ukhsa/sd2011.csv
-data_dict_path : ukhsa/data_dictionary_sd2011.csv
+root : ukhsa/
 
-out_folder : ukhsa/outputs/
+sd2011_path : sd2011.csv
+data_dict_path : data_dictionary_sd2011.csv
+
+out_folder : outputs/
 
 recode_mapping:
   sex : 
